--- a/realtimeviz/src/app.css
+++ b/realtimeviz/src/app.css
@@ -3,14 +3,17 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
+  background-color: #1e1e1e;
+  /* background-color: #242424; */
+  
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  --card-background-color: #1e1e1e;
   --outline-color: #5d5d5d;
+  --card-background-color: #242424f0;
+  /* --card-background-color: #1e1e1e; */
+  --dropshadow-color: #50505048;
 }
 
 html {
@@ -57,8 +60,10 @@ h3 {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
-    --card-background-color: #f3f2f2;
+    background-color: #f3f2f2e2;
+    /* background-color: #ffffff; */
+    --card-background-color: #ffffffec;
+    /* --card-background-color: #f3f2f2e2; */
     --outline-color: #c2c2c2;
   }
 }
