--- a/realtimeviz/src/app.css
+++ b/realtimeviz/src/app.css
@@ -2,8 +2,10 @@
   font-family:  Roboto, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #1e1e1e;
+  color: var(--color);
+  --color: rgba(255, 255, 255, 0.87);
+  background-color: var(--background-color);
+  --background-color: #1e1e1e;
   
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -11,7 +13,7 @@
   -moz-osx-font-smoothing: grayscale;
   --outline-color: #5d5d5d;
   --card-background-color: #242424f0;
-  --dropshadow-color: #50505048;
+  --dropshadow-color: #00000041;
 }
 
 html {
@@ -38,7 +40,7 @@ button {
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
-  font-weight: 500;
+  font-weight: 300;
   font-family: inherit;
   background-color: var(--card-background-color);
   cursor: pointer;
@@ -50,15 +52,18 @@ h2 {
 }
 
 h3 {
-  font-weight: 500;
+  font-weight: 300;
   font-size: 0.8em;
 }
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #f3f2f2e2;
+    color: var(--color);
+    --color: #213547;
+    background-color: var(--background-color);
+    --background-color: #f3f2f2e2;
     --card-background-color: #ffffffec;
     --outline-color: #c2c2c2;
+    --dropshadow-color: #0000001f;
   }
 }
