--- a/realtimeviz/src/app.css
+++ b/realtimeviz/src/app.css
@@ -16,23 +16,23 @@
   --dropshadow-color: #00000041;
 }
 
-html {
+html{
   height: 100%;
 }
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  /* display: flex;
+  place-items: center; */
   min-height: 100vh;
 }
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
+  /* max-width: 1280px; */
+  /* margin: 0 auto; */
   padding: 2rem;
-  text-align: center;
+  /* text-align: center; */
+  /* width: 100%; */
 }
 
 button {
