--- a/vyssuals/src/app.css
+++ b/vyssuals/src/app.css
@@ -43,7 +43,10 @@ button:hover {
 
 h1 {
   font-size: 2em;
-  margin: 0em;
+  margin: 0 auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+
 }
 
 h2 {
